# asv_wave_sim

./: .gitignore  .travis.yml  AddedMass.md  CPPLINT.cfg  IGNITION.md  ISSUES.md  LICENSE_THIRDPARTY  LinearWaveBodyModel.md  MIGRATION.md  README.md
asv_wave_sim/: CMakeLists.txt  package.xml
asv_wave_sim_gazebo_plugins/: CMakeLists.txt  package.xml
asv_wave_sim_gazebo_plugins/include/asv_wave_sim_gazebo_plugins/: Algorithm.hh  CGALTypes.hh  Convert.hh  Gazebo.hh  Geometry.hh  Grid.hh  HydrodynamicsPlugin.hh  MeshTools.hh  OceanTile.hh  OceanVisual.hh  OceanVisualPlugin.hh  Physics.hh  PointLocator.hh  TriangulatedGrid.hh  Utilities.hh  WaveParameters.hh  WaveSimulation.hh  WaveSimulationFFTW.hh  WaveSimulationOpenCL.hh  WaveSimulationSimple.hh  WaveSimulationSinusoid.hh  WaveSimulationSinusoidal.hh  WaveSimulationTrochoid.hh  WaveSpectrum.hh  Wavefield.hh  WavefieldEntity.hh  WavefieldModelPlugin.hh  WavefieldSampler.hh  WavefieldVisualPlugin.hh
asv_wave_sim_gazebo_plugins/include/ignition/marine/: Algorithm.hh  CGALTypes.hh  Convert.hh  Geometry.hh  MeshTools.hh  OceanVisualPlugin.hh  Utilities.hh  WaveParameters.hh  WaveSimulationFFTW.hh  WaveSimulationOpenCL.hh  WaveSimulationSinusoid.hh  WaveSpectrum.hh  WavefieldModelPlugin.hh  WavefieldSampler.hh  WavefieldVisualPlugin.hh
asv_wave_sim_gazebo_plugins/include/ignition/rendering/: OceanVisual.hh
asv_wave_sim_gazebo_plugins/ogre2/src/: CMakeLists.txt  Ogre2OceanVisual.cc
asv_wave_sim_gazebo_plugins/src/: Algorithm.cc  Algorithm_TEST.cc  CGAL_TEST.cc  CMakeLists.txt  Convert.cc  Gazebo.cc  Geometry.cc  Geometry_TEST.cc  Grid.cc  Grid_TEST.cc  GzPhysics_TEST.cc  GzTestRunner.cc  HydrodynamicsMsgPublisher.cc  HydrodynamicsMsgSubscriber.cc  HydrodynamicsPlugin.cc  MeshTools.cc  MeshTools_TEST.cc  OceanTile.cc  OceanVisual.cc  OceanVisualPlugin.cc  Physics.cc  Physics_TEST.cc  PointLocator.cc  TestRunner.cc  TriangulatedGrid.cc  TriangulatedGrid_TEST.cc  Utilities.cc  WaveParameters.cc  WaveSimulation.cc  WaveSimulationFFTW.cc  WaveSimulationOpenCL.cc  WaveSimulationSimple.cc  WaveSimulationSinusoid.cc  WaveSimulationSinusoidal.cc  WaveSimulationTrochoid.cc  WaveSimulation_TEST.cc  WaveSpectrum.cc  Wavefield.cc  WavefieldEntity.cc  WavefieldModelPlugin.cc  (+4 more)
asv_wave_sim_gazebo_plugins/src/systems/: CMakeLists.txt
gz-marine/: CMakeLists.txt
gz-marine/include/gz/marine/: Convert.hh  (+22 more)
gz-marine/src/: Algorithm.cc  Algorithm_TEST.cc  CGAL_TEST.cc  CMakeLists.txt  Convert.cc  Geometry.cc  Geometry_TEST.cc  Grid.cc  Grid_TEST.cc  MeshTools.cc  MeshTools_TEST.cc  OceanTile.cc  PhysicalConstants.cc  Physics.cc  Physics_TEST.cc  SubMeshWithTangents.cc  TriangulatedGrid.cc  TriangulatedGrid_TEST.cc  Utilities.cc  WaveParameters.cc  WaveSimulation.cc  WaveSimulationFFT2.cc  WaveSimulationFFT2Impl.hh  WaveSimulationFFT2_TEST.cc  WaveSimulationFFTW.cc  WaveSimulationOpenCL.cc  WaveSimulationSinusoid.cc  WaveSimulationTrochoid.cc  WaveSimulation_TEST.cc  WaveSpectrum.cc  Wavefield.cc  WavefieldSampler.cc  Wavefield_TEST.cc
gz-marine/src/deprecated/: Gazebo.cc  GzPhysics_TEST.cc  GzTestRunner.cc  HydrodynamicsMsgPublisher.cc  HydrodynamicsMsgSubscriber.cc  HydrodynamicsPlugin.cc  OceanVisual.cc  OceanVisualPlugin.cc  TestRunner.cc  WaveMsgPublisher.cc  WaveMsgSubscriber.cc  WavefieldModelPlugin.cc  WavefieldVisualPlugin.cc
gz-marine/test/: CMakeLists.txt
gz-marine/test/gtest/: gtest-1.7.0.diff
gz-waves/: CMakeLists.txt
gz-waves/cmake/: Add_HighFive.cmake  Add_gnuplot-iostream.cmake  URL.conf.cmake
gz-waves/include/gz/: CMakeLists.txt
gz-waves/src/: Algorithm.cc  Algorithm_TEST.cc  CGAL_TEST.cc  CMakeLists.txt  Convert.cc  EigenFFTW_TEST.cc  Geometry.cc  Geometry_TEST.cc  Grid.cc  Grid_TEST.cc  LinearRandomFFTWaveSimulation.cc  LinearRandomFFTWaveSimulationImpl.hh  LinearRandomFFTWaveSimulationRef.cc  LinearRandomFFTWaveSimulationRef.hh  LinearRandomFFTWaveSimulationRefImpl.hh  LinearRandomFFTWaveSimulation_TEST.cc  LinearRandomWaveSimulation.cc  LinearRegularWaveSimulation.cc  LinearRegularWaveSimulation_TEST.cc  MeshTools.cc  MeshTools_TEST.cc  OceanTile.cc  PhysicalConstants.cc  Physics.cc  Physics_TEST.cc  SubMeshWithTangents.cc  TriangulatedGrid.cc  TriangulatedGrid_TEST.cc  TrochoidIrregularWaveSimulation.cc  Utilities.cc  WaveParameters.cc  WaveSimulation.cc  WaveSimulationFFT.cc  WaveSimulationFFT2.cc  WaveSimulationFFT2Impl.hh  WaveSimulationFFT2_TEST.cc  WaveSimulationFFTImpl.hh  WaveSimulationFFTRef.cc  WaveSimulationFFTRef.hh  WaveSimulationFFTRefImpl.hh  (+13 more)
gz-waves/src/systems/: CMakeLists.txt
gz-waves/test/: CMakeLists.txt
gz-waves/test/performance/: CMakeLists.txt  EigenReturnByValue.cc  LinearRandomFFTWaveSimBaseAmplitudes.cc  LinearRandomFFTWaveSimCurrentAmplitudes.cc  LinearRandomFFTWaveSimDisplacements.cc  LinearRandomFFTWaveSimElevationAt.cc  LinearRegularWaveSimDisplacements.cc  LinearRegularWaveSimDisplacments.cc  TriangulatedGrid.cc  WaveSimFFTBaseAmplitudes.cc  WaveSimFFTCurrentAmplitudes.cc  WaveSimFFTDisplacements.cc  WaveSimSinusoidDisplacements.cc  WaveSpectrumECKV.cc  WavefieldHeight.cc  WavefieldUpdate.cc
gz-waves/test/plots/: CMakeLists.txt  PLOT_GnuPlotExample.cc  PLOT_LinearRandomFFTWaves.cc  PLOT_LinearRandomWaves.cc  PLOT_LinearRegularWaves.cc  PLOT_TriangulatedGrid.cc  PLOT_WaveSpectrum.cc
gz_waves_bridge/: LICENSE  README.md  package.xml  setup.cfg  setup.py
gz_waves_bridge/gz_waves_bridge/: body_response_publisher.py  wave_height_publisher.py
gz_waves_bridge/launch/: box_buoy.launch.py  ellipsoid_buoy.launch.py  mbari_buoy.launch.py  rm3_wec.launch.py  spheroid_test1a.launch.py
gz_waves_bridge/rviz/: ellipsoid_buoy.rviz
wave_gazebo_plugins/: package.xml
wave_sim/: CMakeLists.txt  package.xml
wave_sim_config/: CMakeLists.txt  package.xml  setup.py
wave_sim_config/cfg/: Wave.cfg  WaveSim.cfg  WaveSinusoid.cfg  WaveTile.cfg  WaveWind.cfg
wave_sim_config/include/wave_sim_config/: server.h
wave_sim_config/launch/: wave_sim_config_server.launch
wave_sim_config/nodes/: wave_sim_config_server
wave_sim_config/src/: server.cpp
wave_sim_config/test/: test_server.cpp
(+495 files in other folders)
