<?xml version="1.0"?>
<package format="2">
  <name>asv_wave_sim_gazebo_plugins</name>
  <version>0.1.2</version>
  <description>
    This package contains Gazebo plugins for the simulation of 
    water surface waves and hydrostatic and hydrodynamics forces. 
  </description>
  <maintainer email="rhys.mainwaring@me.com">Rhys Mainwaring</maintainer>
  <license>GPLv3</license>
  <url type="website">https://github.com/srmainwaring/asv_wave_sim</url>
  <url type="repository">https://github.com/srmainwaring/asv_wave_sim</url>
  <url type="bugtracker">https://github.com/srmainwaring/asv_wave_sim/issues</url>
  <author email="rhys.mainwaring@me.com">Rhys Mainwaring</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>cgal</depend>
  <depend>eigen</depend>
  <depend>gazebo_ros</depend>

  <!-- 
  The following system dependencies are available in rosdep
  <depend>opencl</depend>
  <depend>fftw</depend>
  -->
  <export>
    <gazebo_ros plugin_path="${prefix}/lib"/>
  </export>
</package>
